src/Components/landing/landing.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');

div {
  color: #ffffff;
}
.title {
  font-family: 'Open Sans', sans-serif;
  color: white;
  font-size: 4rem;
  margin-left: 5rem;
  margin-right: auto;
  margin-top: 2.25rem;
  margin-bottom: 1rem;
  text-align: left;
}
.titleYear {
  font-family: 'Open Sans', sans-serif;
  color: #faa41a;
}
.navbar {
  margin-left: 5rem;
}
.nav {
  font-family: 'Open Sans', sans-serif;
  margin-right: 2rem;
  font-size: 1.2rem;
  color: white;
  text-decoration: none;
}
.logodiv {
  color: #faa41a;
}
.titleclass {
  background-color: black;
}
@media screen and (max-width: 1023px) {
  .title {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    font-size: 4rem;
  }
}
@media screen and (max-width: 767px) {
  .title {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    font-size: 3rem;
    position: absolute;
    top: -1.2rem;
    left: 6rem;
  }
}
@media screen and (max-width: 640px) {
  .title {
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    font-size: 1.7rem;
    position: absolute;
    left: 5rem;
  }
}
/* NAVBAR PROPERTIES */
nav {
  margin-left: 2.5rem;
  position: sticky;
}

.link1 {
  font-family: 'Open Sans', sans-serif;
  color: white;
  text-decoration: none;
  margin-right: 2rem;
  font-size: 1.4rem;
}
.link1:hover {
  cursor: pointer;
  color: #faa41a;
}
#faq {
  margin-right: 0;
}

@media (max-width: 1023px) {
  .menu1 {
    justify-content: center;
  }
  nav {
    margin: 0;
    text-align: center;
  }
}
@media (max-width: 767px) {
  a {
    color: #fff;
    text-decoration: none;
  }

  .p-menu1 {
    height: 100%;
  }

  /* Hamburger */
  .hamburger1 {
    height: 45px;
    margin: 10px;
    margin-top: 1.6rem;
    display: -ms-grid;
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    justify-items: left;
    z-index: 120;
  }

  .hamburger1 div {
    background-color: rgb(61, 61, 61);
    position: relative;
    width: 40px;
    height: 5px;
    margin-top: 7px;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
  }

  #toggle1 {
    position: absolute;
    left: -9999px;
    display: none;
    visibility: hidden;
  }

  #toggle1:checked + .hamburger1 .top {
    -webkit-transform: rotate(-45deg);
    transform: rotate(-45deg);
    margin-top: 22.5px;
  }

  #toggle1:checked + .hamburger1 .meat {
    -webkit-transform: rotate(45deg);
    transform: rotate(45deg);
    margin-top: -5px;
  }

  #toggle1:checked + .hamburger1 .bottom {
    -webkit-transform: scale(0);
    transform: scale(0);
  }

  #toggle1:checked ~ .menu1 {
    height: 340px;
  }

  /* Menu */
  .menu1 {
    width: 100%;
    background-color: #141414;
    margin: 0;
    display: -ms-grid;
    display: grid;
    grid-template-rows: 1fr repeat(4, 0.5fr);
    grid-row-gap: 25px;
    padding: 0;
    list-style: none;
    clear: both;
    width: auto;
    text-align: center;
    height: 0px;
    overflow: hidden;
    transition: height 0.4s ease;
    z-index: 120;
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
  }

  .menu1 a:first-child {
    margin-top: 40px;
  }

  .menu1 a:last-child {
    margin-bottom: 40px;
  }

  .link1 {
    width: 100%;
    margin: 0;
    padding: 10px 0;
    font: 700 20px 'Oswald', sans-serif;
  }

  .link1:hover {
    background-color: #fff;
    color: rgb(61, 61, 61);
    -webkit-transition: all 0.3s ease;
    transition: all 0.3s ease;
  }
}
@media (max-width: 640px) {
  .hamburger1 {
    margin: 10px;
    margin-top: 1.2rem;
    display: flex;
    flex-direction: column;
  }

  .hamburger1 div {
    position: relative;
    margin-top: 0.3rem;
    width: 30px;
    height: 4px;
    -webkit-transition: all 0.2s ease-in-out;
    transition: all 0.2s ease-in-out;
  }
}

/* NAVBAR PROPERTIES */
.logodiv {
  width: 100%;
  display: flex;
  justify-content: center;
}
.logo {
  margin-top: 2.5rem;
  width: 17rem;
  margin-bottom: 0;
}

@media screen and (max-width: 1023px) {
  .logo {
    width: 14rem;
    margin-top: 8rem;
  }
}
@media screen and (max-width: 767px) {
  .logo {
    width: 14rem;
  }
}
@media screen and (max-width: 640px) {
  .logo {
    width: 12rem;
    margin-top: 10rem;
  }
}
@media screen and (max-width: 400px) {
  .logo {
    width: 10rem;
    margin-top: 8rem;
  }
}

.parenttxt {
  display: flex;
  justify-content: center;
  margin-bottom: -0.25rem;
}
.empowertxt {
  font-family: 'Open Sans', sans-serif;
  color: white;
  font-size: 2rem;
  text-align: center;
}

@media screen and (max-width: 767px) {
  .empowertxt {
    font-size: 1.75rem;
  }
}
@media screen and (max-width: 640px) {
  .empowertxt {
    font-size: 1.3rem;
  }
}

.count {
  margin: 0;
  width: 100%;
  height: 7rem;
}
.btndiv {
  margin-top: 1rem;
  display: flex;
  justify-content: center;
}
.btn {
  font-family: 'Open Sans', sans-serif;
  margin-top: 0.5rem;
  width: 9rem;
  height: 3rem;
  border-radius: 2rem;
  font-size: 1.1rem;
  font-weight: bold;
}
.btn:hover {
  cursor: pointer;
}
@media screen and (max-width: 640px) {
  .btn {
    width: 7rem;
    height: 2rem;
    font-size: 0.8rem;
  }
}

